--- a/styles/style.css
+++ b/styles/style.css
@@ -29,11 +29,16 @@
     src: url(../fonts/HachiMaruPop-Regular.ttf);
 }
 
+@font-face {
+    font-family: 'Nunito';
+    src: url(../fonts/Nunito-VariableFont_wght.ttf);
+}
+
 
 * {
     margin: 0;
     padding: 0;
-    font-family: "Yandex_sans";
+    font-family: "Nunito";
 }
 
 html {
@@ -236,8 +241,11 @@ main{
 
     .photos{
         width: 60vw;
-        height: 30vw;
-        background-color: red;
+        height: 40vw;
+        
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
     }
 
     .photo-2{
@@ -245,6 +253,9 @@ main{
         width: 20vw;
         height: 30vw;
         background-color: blue;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
         top: -5vw;
         left: -15vw;
     }
@@ -254,18 +265,21 @@ main{
         width: 20vw;
         height: 30vw;
         background-color: green;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
         top: -35vw;
         left: calc(100% - 5vw);
     }
 
     .text-about-photo{
         position: relative;
-        top: -35vw;
+        top: -25vw;
         display: flex;
         justify-content: center;
         p{
             width: 50%;
-            font-family: 'Yandex_italic';
+            font-family: 'Nunito';
             background-color: white;
             padding: 40px;
             box-shadow: 0 0.5rem 1rem rgba(0,0,0, .1);
@@ -286,12 +300,13 @@ main{
 }
 
 .section2{
-    display: flex;
-    flex-direction: row;
+    display: grid;
     margin-top: 100px;
     background-color: rgb(222, 192, 165);
+    padding-right: 5vw;
     .description{
-        width: 50%;
+        grid-column: 1;
+        width: 45vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -309,7 +324,7 @@ main{
         }
 
         p{
-            font-family: 'Yandex_sans';
+            font-family: 'Nunito';
             color: white;
             margin: 20px;
             font-size: 1.2rem;
@@ -317,13 +332,30 @@ main{
         }
     }
     .photo-div{
-        width: 50%;
-        padding: 80px;
+        grid-column: 2;
+        width: 40vw;
+        padding: 5vw;
+        min-height: 40vh;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
 
-        .photo{
-            background-color: red;
-            width: 100%;
-            height: 25vw;
+        .photo1{
+            
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 19vw;
+            height: 100%;
+        }
+        .photo2{
+            
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 19vw 102%;
+            width: 19vw;
+            height: 100%;
         }
     }
 }
@@ -346,10 +378,11 @@ main{
 
     ul{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
-        height: 100vh;
+        width: 80vw;
         align-items: center;
+        justify-content: center;
     }
     li{
         z-index: 2;
@@ -357,6 +390,7 @@ main{
         list-style-type: none;
         margin: 20px;
         margin-top: 100px;
+        margin-left: 100px;
 
         .photo{
             background-color: rgb(222, 192, 165);
@@ -387,7 +421,7 @@ main{
 
         p{
             z-index: 2;
-            font-family: 'Yandex_sans';
+            font-family: 'Nunito';
             color: rgb(0, 0, 0);
 
             font-size: 1.2rem;
@@ -427,7 +461,10 @@ main{
             /* padding: 80px; */
 
             .photo{
-                background-color: red;
+                
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
                 width: 100%;                
                 height: 35vw;
             }
@@ -439,7 +476,7 @@ main{
             justify-content: center;
             padding: 100px 100px 100px 0px;
             p{
-                font-family: 'Yandex_italic';
+                font-family: 'Nunito';
                 color: rgb(0, 0, 0);
                 margin: 20px;
                 font-size: 1.2rem;
@@ -476,15 +513,18 @@ main{
     .zone-item{
         .photo{
             border-radius: 50%;
-            width: 10vw;
-            height: 10vw;
-            background-color: red;
+            width: 156.3px;
+            height: 156.3px;
+            
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
             margin: 20px;
         }
         span{
             position: relative;
-            top: calc(-9vw - 30px);
-            left: 9vw;
+            top: calc(-156.3px - 10px);
+            left: 136.3px;
         }
         .bx{
             background-color: rgb(222, 192, 165);
@@ -493,7 +533,7 @@ main{
 
         }
         .p{
-            font-family: 'Yandex_sans';
+            font-family: 'Nunito';
             color: rgb(0, 0, 0);    
             font-size: 1.5rem;
             margin-top: -15px;
@@ -506,7 +546,7 @@ main{
             padding: 10px;
             border-radius: 5px;
             transform: translate(-9vw, 0);
-            font-family: 'Yandex_sans';
+            font-family: 'Nunito';
             color: rgb(0, 0, 0);
             font-size:  1rem;
             width: 15vw;
@@ -534,3 +574,301 @@ main{
 }
 
 
+.section7{
+    margin-top: 100px;
+    padding-left: 5vw;
+    padding-right: 5vw;    
+
+    h1{
+        font-family: 'HachiMaru';
+        display: inline-block;
+        font-size: 2rem;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        margin: 20px;
+        letter-spacing: -3px;
+        width: 60vw;
+    }
+    .services{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: start;
+
+
+        .service{
+            width: calc(25vw - 20px);
+            margin: 20px;
+            border-radius: 30px;
+            padding: 20px;
+        }
+        .service1{
+            background-color:rgb(239, 200, 166);
+        }
+        .service2{
+            background-color:rgb(245, 225, 207);
+        }
+        .service3{
+            background-color:rgb(216, 189, 168);
+        }
+        .service4{
+            background-color:rgb(248, 226, 207);
+        }
+
+        h2{
+            font-family: 'HachiMaru';
+            display: inline-block;
+            font-size: 1.2rem;
+            color: rgb(0, 0, 0);
+            font-weight: bold;
+            margin-bottom: 10px;
+            letter-spacing: -3px;
+        }
+        ul{
+            list-style-type: none;
+        }
+        li{
+            margin-top: 10px;
+            color: rgb(78, 78, 78);
+        }
+
+        li::before{
+            content: '— ';
+        }
+
+        .price{
+            margin: 10px;
+            margin-top: 30px;
+            margin-bottom: 30px;
+            font-size: 1.3rem;
+            color: rgb(0, 0, 0);
+            font-weight: bold;
+        }
+        .get_service{
+            padding: 12px 30px;
+            font-size: 0.8rem;
+            background-color: rgb(0, 97, 0);
+            color: white;
+            border-radius: calc(10px + 1rem);
+            display: flex;
+            border-color:transparent;
+            font-weight: bold;
+            justify-content: center;
+            align-items: center;
+            transform: background-color 0.3;
+
+            &:active{
+                background-color: rgb(0, 97, 0, 0.8);
+            }
+
+            @media (hover) {
+                &:hover{
+                    cursor: pointer;
+                    transform: background-color 0.3;
+                    background-color: rgb(0, 97, 0, 0.8);
+                }
+            }
+        }
+    }
+}
+
+.text-me{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+}
+
+.text-me-icon{
+    background-color: rgb(0, 95, 0);
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+
+    
+
+    &:active{
+        background-color:rgba(0, 95, 0, 0.719);
+    }
+
+    @media (hover) {
+        &:hover{
+            cursor: pointer;
+            background-color:rgba(0, 95, 0, 0.719);
+        }
+    }
+}
+
+.contacts-text-me{
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0, .1);
+    display: none;
+    width: fit-content;
+    position: fixed;
+    right: 20px;
+    bottom: 100px;
+
+    .messenger{
+        display: flex;
+        flex-direction:column;
+        align-items: center;
+        justify-content: center;
+        margin: 10px;
+        .photo{
+            background-color: rgb(255, 255, 255);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 70px;
+            height: 70px;
+            border-radius: 50%;
+        }
+        p{
+            font-family: 'Nunito';
+            color: rgb(0, 0, 0);
+            margin: 20px;
+            font-size: 0.7rem;
+        }
+    }
+}
+
+.cross{
+    display: none;
+}
+
+.message{
+    display: block;
+}
+
+#check2{
+    display: none;
+}
+
+#check2:checked ~ label > div > .cross{
+    display: block;
+}
+
+#check2:checked ~ label > div > .message{
+    display: none;
+}
+
+#check2:checked ~ .contacts-text-me{
+    display: flex;
+}
+
+@media screen and (max-width: 1200px) {
+    .service{
+        display: block;
+        width: calc(50vw - 20px) !important;
+    }
+    .section1 > .name > h1{
+        font-size: 2rem;
+    }
+
+    .section1 > .photos-div > .photos > .text-about-photo > p{
+        width: 100%;
+    }
+    .section1 > .photos-div > .photos > .text-about-photo{
+        width: 90vw;
+        transform: translate(-15vw, 0);
+    }
+    .section1 > .button_div{
+        margin-top: 200px;
+    }
+    .section2 > .photo-div{
+        grid-column: 1;
+        width: 100%;
+        div{
+            width: 40vw !important;
+        }
+        .photo2{
+            background-size: cover;
+        }
+    }
+
+    .section2 > .description{
+        padding: 20px;
+        h1{
+            font-size: 1.5rem;
+        }
+        p{
+            width: 70vw !important
+        }
+    }
+
+    .section3{
+        li{
+            margin-left: 15vw;
+            width: 80vw;
+        }
+        h1{
+            font-size: 1.7rem;
+        }
+    }
+
+    .section4{
+        
+        h1{
+            font-size: 1.3rem;
+        }
+        .about{
+            flex-direction: column;
+
+            .photo-div{
+                width: 100%;
+                height: 60vh;
+                .photo{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .description{
+                width: 100%;
+                padding: 0;
+                margin: 0;
+                p{
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    .section5{
+        h1{
+            font-size: 1.3rem;
+        }
+        .zones{
+            .zone-item{
+                .description{
+                    width: 15vw;
+                    transform: translate(-6vw, 0);
+                }
+                .photo{
+                    width: 100px;
+                    height: 100px;
+                }
+                span{
+                    position: relative;
+                    top: calc(-110px - 10px);
+                    left: 90px;
+                }
+            }
+        }
+    }
+    .section7{
+        h1{
+            font-size: 1.3rem;
+        }
+    }
+}
+
+@media (max-width: 500px) {
+    .section1 > .name > h1{
+        font-size: 1.3rem;
+    }
+    .service{
+        width: calc(80vw - 20px) !important;
+    }
+}
