--- a/styles/style.css
+++ b/styles/style.css
@@ -295,11 +295,14 @@ main{
     margin-top: 150px;
     
     button{
+        text-decoration: none;
         padding: 12px 30px;
         font-size: 1.2rem;
         border-color: transparent;
     }
 }
+
+
 
 .section2{
     display: grid;
@@ -758,6 +761,11 @@ main{
 
 #check2:checked ~ .contacts-text-me{
     display: flex;
+}
+
+.scroll-elem{
+    scroll-behavior: smooth;
+    scroll-margin: calc(60px + 20px + 1rem);
 }
 
 @media screen and (max-width: 1200px) {
