--- a/styles/style.css
+++ b/styles/style.css
@@ -73,6 +73,23 @@ header{
 
 .navbar_item{
     margin: 0 20px;
+    color: black;
+    text-decoration: none;
+    font-size: 1rem;
+    background-color: transparent;
+    border: none;
+    font-family: inherit;
+
+    &:active{
+        font-weight: bold;
+    }
+
+    @media (hover) {
+        &:hover{
+            cursor: pointer;
+            font-weight: bold;
+        }
+    }
 }
 
 .logo{
@@ -185,7 +202,6 @@ header{
         align-items: center;
         padding-left: 0;
         padding-right: 0;
-        padding-bottom: 20px;
 
         .create_request{
             width: 185.89px;
@@ -203,7 +219,8 @@ header{
     }
       
     #check:checked ~ .header{
-        height: 370.4px;
+        height: 300.4px;
+        z-index: 100;
     }
 }
 
@@ -254,7 +271,6 @@ main{
         position: relative;
         width: 20vw;
         height: 30vw;
-        background-color: blue;
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -266,7 +282,6 @@ main{
         position: relative;
         width: 20vw;
         height: 30vw;
-        background-color: green;
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -599,7 +614,7 @@ main{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        align-items: start;
+        align-items: stretch;
 
 
         .service{
@@ -607,6 +622,9 @@ main{
             margin: 20px;
             border-radius: 30px;
             padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
         }
         .service1{
             background-color:rgb(239, 200, 166);
@@ -651,6 +669,8 @@ main{
             font-weight: bold;
         }
         .get_service{
+            display: inline-block;
+            width: fit-content;
             padding: 12px 30px;
             font-size: 0.8rem;
             background-color: rgb(0, 97, 0);
@@ -720,7 +740,7 @@ main{
         flex-direction:column;
         align-items: center;
         justify-content: center;
-        margin: 10px;
+        
         .photo{
             background-color: rgb(255, 255, 255);
             background-repeat: no-repeat;
@@ -729,6 +749,17 @@ main{
             width: 70px;
             height: 70px;
             border-radius: 50%;
+            margin: 10px;
+
+            @media (hover) {
+                &:hover{
+                    cursor: pointer;
+                    width: 75px;
+                    height: 75px;
+                    margin-top: 5px;
+                }
+            }
+        
         }
         p{
             font-family: 'Nunito';
@@ -767,6 +798,89 @@ main{
     scroll-behavior: smooth;
     scroll-margin: calc(60px + 20px + 1rem);
 }
+
+.popup_with_contacts{
+    display: none;
+    position: fixed;
+    top: 10%;
+    left: 10%;
+    width: 80%;
+    height: 80%;
+    background-color: white;
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0, .1);
+    border-radius: 10px;
+    z-index: 200;
+    padding: 20px;
+    text-align: center;
+
+    h1{
+
+        font-family: 'HachiMaru';
+        padding: 7% 10%;
+    }
+
+    .cross{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        color:rgb(0, 0, 0);
+        display: block;
+
+        @media (hover) {
+            &:hover{
+                cursor: pointer;
+                color:rgb(0, 95, 0)
+            }
+        }
+    }
+
+    .contacts{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 20px;
+        height: 40%;
+        align-items: end;
+        
+        .photo{
+            background-color: rgb(255, 255, 255);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 10vw;
+            height: 10vw;
+            border-radius: 50%;
+            margin: 10px;
+
+            @media (hover) {
+                &:hover{
+                    cursor: pointer;
+                    width: calc(10vw + 15px);
+                    height: calc(10vw + 15px);
+                    margin: 2.5px;
+                    margin-bottom: -5px;
+                }
+            }
+        
+        }
+        p{
+            font-family: 'Nunito';
+            color: rgb(0, 0, 0);
+            margin: 20px;
+            font-size: 1.2rem;
+        }
+    }
+}
+
+#check-3{
+    display: none;
+}
+
+#check-3:checked ~ .popup_with_contacts{
+    display: block;
+}
+
 
 @media screen and (max-width: 1200px) {
     .service{
@@ -874,6 +988,81 @@ main{
     }
 }
 
+@media (max-width: 1000px) {
+    .popup_with_contacts{
+
+        padding: 10px;
+        text-align: center;
+    
+        h1{
+            font-size: 1.2rem;
+            font-family: 'HachiMaru';
+            padding: 7% 10%;
+        }
+    
+        .cross{
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color:rgb(0, 0, 0);
+            display: block;
+            width: 30px;
+            height: 30px;
+    
+            @media (hover) {
+                &:hover{
+                    cursor: pointer;
+                    color:rgb(0, 95, 0)
+                }
+            }
+        }
+    
+        .contacts{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+            height: 40%;
+            align-items: center;
+            .messenger{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+            
+            .photo{
+                background-color: rgb(255, 255, 255);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                width: 20vw;
+                height: 20vw;
+                border-radius: 50%;
+                margin: 10px;
+    
+                @media (hover) {
+                    &:hover{
+                        cursor: pointer;
+                        width: calc(10vw + 15px);
+                        height: calc(10vw + 15px);
+                        margin: 2.5px;
+                        margin-bottom: -5px;
+                    }
+                }
+            
+            }
+            p{
+                font-family: 'Nunito';
+                color: rgb(0, 0, 0);
+                margin: 20px;
+                font-size: 1rem;
+            }
+        }
+    }
+}
+
 @media (max-width: 500px) {
     .section1 > .name > h1{
         font-size: 1.3rem;
@@ -952,5 +1141,83 @@ main{
     .section2 > .description > h1{
         font-size: 1rem;
     }
+
+    .popup_with_contacts{
+        padding: 5px;
+        padding-top: 25px;
+        text-align: center;
+        height: auto;
     
+        h1{
+            font-size: 0.9rem;
+            font-family: 'HachiMaru';
+            padding: 7% 10%;
+        }
+    
+        .cross{
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color:rgb(0, 0, 0);
+            display: block;
+            width: 20px;
+            height: 20px;
+    
+            @media (hover) {
+                &:hover{
+                    cursor: pointer;
+                    color:rgb(0, 95, 0)
+                }
+            }
+        }
+    
+        .contacts{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+            height: 40%;
+            align-items: center;
+            .messenger{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+            
+            .photo{
+                background-color: rgb(255, 255, 255);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                width: 20vw;
+                height: 20vw;
+                border-radius: 50%;
+                margin: 10px;
+    
+                @media (hover) {
+                    &:hover{
+                        cursor: pointer;
+                        width: calc(10vw + 15px);
+                        height: calc(10vw + 15px);
+                        margin: 2.5px;
+                        margin-bottom: -5px;
+                    }
+                }
+            
+            }
+            p{
+                font-family: 'Nunito';
+                color: rgb(0, 0, 0);
+                margin: 5px;
+                font-size: 0.8rem;
+            }
+        }
+    }
+    
+}
+
+a{
+    text-decoration: none;
 }
