--- a/styles/style.css
+++ b/styles/style.css
@@ -1080,7 +1080,7 @@ main{
         }
     }
 
-    .contacts-text-me > .messenger{
+    .contacts-text-me > a > .messenger{
         margin: 0;
         p{
             font-size: 0.5rem;
@@ -1095,7 +1095,7 @@ main{
 }
 
 @media screen and (max-width: 400px) {
-    .contacts-text-me > .messenger{
+    .contacts-text-me > a > .messenger{
         margin: 0 5px;
         p{
             font-size: 0.5rem;
@@ -1214,6 +1214,23 @@ main{
                 font-size: 0.8rem;
             }
         }
+    }
+
+    .contacts-text-me > a > .messenger{
+        margin: 0 2px;
+        p{
+            font-size: 0.5rem;
+            padding: 0;
+            margin: 2px 0;
+        }
+
+        .photo{
+            width: 30px;
+            height: 30px;
+        }
+    }
+    .contacts-text-me{
+        padding: 2px;
     }
     
 }
