--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ header{
     
 .icons {
     position:relative;
-    left: calc(95% - 2.2rem);
+    left: calc(95% - 13rem - 20px);
     font-size: 2.2rem;
     
     color: black;
@@ -164,11 +164,10 @@ header{
 
     .logo-small{
         display:inline-block;
-        height: 10px;
-        width: 10px;
         align-self: center;
         position: relative;
         left: 20px;
+        font-family: 'HachiMaru';
     }
 
     .icons{
@@ -734,6 +733,7 @@ main{
     position: fixed;
     right: 20px;
     bottom: 100px;
+    z-index: 150;
 
     .messenger{
         display: flex;
