--- a/styles/style.css
+++ b/styles/style.css
@@ -264,6 +264,7 @@ main{
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        border-radius: 10px;
     }
 
     .photo-2{
@@ -274,6 +275,7 @@ main{
         background-position: center;
         background-size: cover;
         top: -5vw;
+        border-radius: 10px;
         left: -15vw;
     }
 
@@ -285,6 +287,7 @@ main{
         background-position: center;
         background-size: cover;
         top: -35vw;
+        border-radius: 10px;
         left: calc(100% - 5vw);
     }
 
