--- a/styles/style.css
+++ b/styles/style.css
@@ -700,6 +700,64 @@ main{
     }
 }
 
+.section_with_contacts{
+    padding: calc(10% + 20px);
+    text-align: center;
+    
+
+    h1{
+        font-family: 'HachiMaru';
+        padding: 7% 10%;
+    }
+
+
+    .contacts{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 20px;
+        height: 40%;
+        align-items: end;
+
+        .void{
+            width: 10vw;
+            height: 10vw;
+            border-radius: 50%;
+            margin: 10px;
+        }
+        
+        .photo{
+            position: absolute;
+            background-color: rgb(255, 255, 255);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            width: 10vw;
+            height: 10vw;
+            border-radius: 50%;
+            margin: 10px;
+
+            @media (hover) {
+                &:hover{
+                    cursor: pointer;
+                    width: calc(10vw + 15px);
+                    height: calc(10vw + 15px);
+                    margin: 2.5px;
+                    margin-bottom: -5px;
+                }
+            }
+        
+        }
+        p{
+            font-family: 'Nunito';
+            color: rgb(0, 0, 0);
+            margin: 20px;
+            font-size: 1.2rem;
+        }
+    }
+}
+
 .text-me{
     position: fixed;
     right: 20px;
@@ -845,6 +903,7 @@ main{
         margin-top: 20px;
         height: 40%;
         align-items: end;
+        
         
         .photo{
             background-color: rgb(255, 255, 255);
@@ -1064,6 +1123,70 @@ main{
             }
         }
     }
+
+    .section_with_contacts{
+
+        padding: calc(10% + 10px);
+        text-align: center;
+    
+        h1{
+            font-size: 1.2rem;
+            font-family: 'HachiMaru';
+            padding: 7% 10%;
+        }
+    
+        .contacts{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+            height: 40%;
+            align-items: center;
+            .messenger{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .void{
+                width: 20vw;
+                height: 20vw;
+                border-radius: 50%;
+                margin: 10px;
+            }
+            
+            .photo{
+                background-color: rgb(255, 255, 255);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                width: 20vw;
+                height: 20vw;
+                border-radius: 50%;
+                margin: 10px;
+                
+    
+                @media (hover) {
+                    &:hover{
+                        cursor: pointer;
+                        width: calc(10vw + 15px);
+                        height: calc(10vw + 15px);
+                        margin: 2.5px;
+                        margin-bottom: -5px;
+                    }
+                }
+            
+            }
+            p{
+                font-family: 'Nunito';
+                color: rgb(0, 0, 0);
+                margin: 20px;
+                font-size: 1rem;
+            }
+        }
+    }
 }
 
 @media (max-width: 500px) {
@@ -1215,6 +1338,71 @@ main{
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+            }
+            
+            .photo{
+                background-color: rgb(255, 255, 255);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                width: 20vw;
+                height: 20vw;
+                border-radius: 50%;
+                margin: 10px;
+    
+                @media (hover) {
+                    &:hover{
+                        cursor: pointer;
+                        width: calc(10vw + 15px);
+                        height: calc(10vw + 15px);
+                        margin: 2.5px;
+                        margin-bottom: -5px;
+                    }
+                }
+            
+            }
+            p{
+                font-family: 'Nunito';
+                color: rgb(0, 0, 0);
+                margin: 5px;
+                font-size: 0.8rem;
+            }
+        }
+    }
+
+    .section_with_contacts{
+        padding: calc(10% + 2.5px);
+        padding-top: calc(10% + 25px);
+        text-align: center;
+        height: auto;
+    
+        h1{
+            font-size: 0.9rem;
+            font-family: 'HachiMaru';
+            padding: 7% 10%;
+        }
+    
+    
+        .contacts{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+            margin-top: 20px;
+            height: 40%;
+            align-items: center;
+            .messenger{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .void{
+                width: 20vw;
+                height: 20vw;
+                border-radius: 50%;
+                margin: 10px;
             }
             
             .photo{
