--- a/styles/style.css
+++ b/styles/style.css
@@ -358,6 +358,8 @@ main{
     }
 }
 
+
+
 .section3{
     background-color: rgb(253, 248, 244);
     padding-top: 80px;
@@ -672,6 +674,93 @@ main{
                     background-color: rgb(0, 97, 0, 0.8);
                 }
             }
+        }
+    }
+}
+
+.section8{
+    margin-top: 100px;
+    padding-left: 5vw;
+    padding-right: 5vw;
+    background-color:rgb(253, 248, 244);
+    h1{
+        font-family: 'HachiMaru';
+        display: inline-block;
+        font-size: 3rem;
+        color: rgb(0, 0, 0);
+        font-weight: bold;
+        margin: 20px;
+        letter-spacing: -3px;
+        width: 60vw;
+    }
+
+    .projects{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-items: center;
+
+        .project{
+            width: 40vw;
+            margin: 20px;
+            .photos{
+                width: 100%;                
+                height: 35vw;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                border-radius: 10px;
+                box-shadow: 0 0.5rem 1rem rgba(0,0,0, .1);
+                overflow: hidden;
+
+                .before{
+                    position: relative;
+                    width: calc(50% - 10px);
+                    height: 100%;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+
+                .before::before{
+                    content: 'ДО';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    padding: 10px;
+                    font-family: 'Nunito';
+                    font-size: 1.2rem;
+                    color: rgb(255, 255, 255);
+                    font-weight: bold;
+                    background-color: rgba(0,0,0, .6);
+                    border-radius: 10px;
+                }
+
+                .after{
+                    width: calc(50% - 10px);
+                    height: 100%;
+                    position: relative;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+                .after::after{
+                    content: 'ПОСЛЕ';
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    padding: 10px;
+                    font-family: 'Nunito';
+                    font-size: 1.2rem;
+                    color: rgb(255, 255, 255);
+                    font-weight: bold;
+                    background-color: rgba(0,0,0, .6 );
+                    border-radius: 10px;
+                }
+            }
+
+            
         }
     }
 }
@@ -1165,6 +1254,32 @@ main{
     }
 }
 
+@media (max-width: 800px) {
+    .section8{
+        h1{
+            font-size: 2rem;
+        }
+        .projects{
+            .project{
+                width: 90vw;
+                height: 50vh;
+                .photos{
+                    width: 100%;
+                    height: 100%;
+                    .before{
+                        width: calc(50% - 5px);
+                        height: 100%;
+                    }
+                    .after{
+                        width: calc(50% - 5px);
+                        height: 100%;
+                    }
+                }
+            }
+        }
+    }
+}
+
 @media (max-width: 500px) {
     .section1 > .photos-div > .photos{
         width: 90%;
@@ -1429,6 +1544,38 @@ main{
     }
     .section1 > .button_div{
         margin-top: 180px;
+    }
+
+    .section8{
+        h1{
+            font-size: 1.3rem;
+        }
+        .projects{
+            .project{
+                width: 90vw;
+                height: 30vh;
+                .photos{
+                    width: 100%;
+                    height: 100%;
+                    .before{
+                        width: calc(50% - 2px);
+                        height: 100%;
+
+                        &::before{
+                            font-size: 0.8rem;
+                        }
+                    }
+                    .after{
+                        width: calc(50% - 2px);
+                        height: 100%;
+
+                        &::after{
+                            font-size: 0.8rem;
+                        }
+                    }
+                }
+            }
+        }
     }
     
 }
