--- a/styles/style.css
+++ b/styles/style.css
@@ -553,7 +553,7 @@ main{
             background-color: white;
             box-shadow: 0 0.5rem 1rem rgba(0,0,0, .1);
         }
-        .bx:hover + .description{
+        &:hover span > .description{
             display: block;
         }
 
@@ -613,7 +613,14 @@ main{
             background-color:rgb(245, 225, 207);
         }
         .service3{
+            
             background-color:rgb(216, 189, 168);
+
+            ul > p{
+                margin-top: 10px;
+                color: rgb(78, 78, 78);
+
+            }
         }
         .service4{
             background-color:rgb(248, 226, 207);
